--- a/config/database.yml
+++ b/config/database.yml
@@ -25,4 +25,4 @@ test:
     encoding: unicode
     databse: blog_production
     username: myapp
-    password: <%= ENV['MYAPP_DATABSE_PASSWORD' %>]
+    password: <%= ENV['MYAPP_DATABSE_PASSWORD'] %>
